--- a/about_us.html
+++ b/about_us.html
@@ -274,10 +274,10 @@
         <!-- Navigation Bar -->
         <nav style="background-color: #5C4033; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; color: rgb(90, 46, 16);">
             <div style="font-size: 1.5em; font-weight: bold;">
-                <a href="homepage.html" style="text-decoration: none; color: rgb(255, 215, 177);">ＳＨＡＫＥＲＺ</a>
+                <a href="index.html" style="text-decoration: none; color: rgb(255, 215, 177);">ＳＨＡＫＥＲＺ</a>
             </div>
             <ul style="list-style: none; display: flex; gap: 20px; margin: 0; padding: 0;">
-                <li><a href="homepage.html" style="text-decoration: none; color: rgb(255, 215, 177); font-size: 1.1em;">𝐇𝐨𝐦𝐞</a></li>
+                <li><a href="index.html" style="text-decoration: none; color: rgb(255, 215, 177); font-size: 1.1em;">𝐇𝐨𝐦𝐞</a></li>
                 <li><a href="about_us.html" style="text-decoration: none; color: rgb(255, 215, 177); font-size: 1.1em;">𝐀𝐛𝐨𝐮𝐭 𝐔𝐬</a></li>
                 <li><a href="flavours.html" style="text-decoration: none; color: rgb(255, 215, 177); font-size: 1.1em;">𝐅𝐥𝐚𝐯𝐨𝐮𝐫𝐬</a></li>
                 <li><a href="shop.html" style="text-decoration: none; color: rgb(255, 215, 177); font-size: 1.1em;">𝐒𝐡𝐨𝐩</a></li>
