--- a/join_us.html
+++ b/join_us.html
@@ -188,10 +188,10 @@
 
         <nav>
             <div class="logo">
-                <a href="homepage.html">ＳＨＡＫＥＲＺ</a>
+                <a href="index.html">ＳＨＡＫＥＲＺ</a>
             </div>
             <ul>
-                <li><a href="homepage.html">𝐇𝐨𝐦𝐞</a></li>
+                <li><a href="index.html">𝐇𝐨𝐦𝐞</a></li>
                 <li><a href="about_us.html">𝐀𝐛𝐨𝐮𝐭 𝐔𝐬</a></li>
                 <li><a href="flavours.html">𝐅𝐥𝐚𝐯𝐨𝐮𝐫𝐬</a></li>
                 <li><a href="shop.html">𝐒𝐡𝐨𝐩</a></li>
